--- a/purets/index.html
+++ b/purets/index.html
@@ -6,5 +6,5 @@
     <title>Document</title>
 </head>
 <body>
-<script type="module" src="./dist/index.js"></script></body>
+<script type="module" src="./dist/typeNarrowing.js"></script></body>
 </html>
