--- a/projects/ecomm/client/index.html
+++ b/projects/ecomm/client/index.html
@@ -62,7 +62,6 @@
             <a href="#" class="brand-card">H&M</a>
         </div>
     </section>
-
     <!-- Products Section -->
     <section class="products-section" id="products">
         <div class="section-header">
@@ -138,6 +137,6 @@
             <p>&copy; 2024 FASHIONHUB. All Rights Reserved.</p>
         </div>
     </footer>
-    <script src="./dist/main.js"></script>
+    <script type="module" src="./dist/index.js"></script>
 </body>
 </html>
